Pulsar deploy and Log4shell fixes
- pulsar deploy now can use one deploy.yaml for 3 different deployment scenarios with or without stats

- log4shell cve is mitigated
  - java parameters set in pulsar_env.sh scripts
  - pom.xml updates to log4j 3.15.0